WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131826
Hit-testing is incorrect for plugins inside iframes when there is a topContentInset
https://bugs.webkit.org/show_bug.cgi?id=131826
Summary
Hit-testing is incorrect for plugins inside iframes when there is a topConten...
Beth Dakin
Reported
2014-04-17 15:51:03 PDT
Hit-testing is incorrect for plugins inside iframes when there is a topContentInset. This test case will exhibit the bug if you have a topContentInset set: <iframe src="
http://homestarrunner.com/main8.html
"></iframe> <
rdar://problem/16649996
>
Attachments
Patch
(1.84 KB, patch)
2014-04-17 15:54 PDT
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-04-17 15:54:21 PDT
Created
attachment 229588
[details]
Patch
Beth Dakin
Comment 2
2014-04-17 15:59:44 PDT
Thanks, Tim!
http://trac.webkit.org/changeset/167460
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug