Hit-testing is incorrect for plugins inside iframes when there is a topContentInset https://bugs.webkit.org/show_bug.cgi?id=131826 -and corresponding- <rdar://problem/16649996>

Reviewed by Tim Horton.

I missed one coordinate-conversion spot when getting hit-testing to work. Like
headerHeight() which also manipulates the location of the root layer,
topContentInset() has to be factored into all of these conversions.
* page/FrameView.cpp:
(WebCore::FrameView::convertFromRenderer):



Canonical link: https://commits.webkit.org/149888@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167460 268f45cc-cd09-0410-ab3c-d52691b4dbfc